--- a/articolo.html
+++ b/articolo.html
@@ -62,12 +62,18 @@
 
     <main>
       <article class="clearfix">
-        <h1>Come creare un template per i post</h1>
-        <img
-          id="underline"
-          src="assets/img/underline.svg"
-          alt="sottolineatura"
-        />
+        <h1>
+          Come creare un
+          <div id="underlined-box">
+            <span>template per i post</span
+            ><img
+              id="underline"
+              src="assets/img/underline.svg"
+              alt="sottolineatura"
+            />
+          </div>
+        </h1>
+
         <p>
           <i class="fas fa-pen-square"></i> di Mario Rossi -
           <span><i class="fas fa-clock"></i> pubblicato il 25-10-2020</span>
